2D vortex shedding experiment
Adds a simulation for a 2D cylinder up to Re=200

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,12 @@
 **/dynamicCode
 **/postProcessing
 **/[1-9]*
+**/0.[1-9]*
+**/0/cellLevel
+**/0/pointLevel
+**/0/Co
 **/processor*
 **/log.*
+**/results
+
+!2d_cylinder_vortex_shedding
